force-app/main/default/objects/Area_Hierarchy__c/Area_Hierarchy__c.object-meta.xml
<CustomObject>
    <label>Area Hierarchy</label>
    <nameField>
        <displayFormat>AH-{000000}</displayFormat>
        <label>Area Hierarchy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Area Hierarchies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>