force-app/main/default/objects/Area_Hierarchy__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Area Hierarchies</relationshipLabel>
    <relationshipName>Area_Hierarchies</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>