force-app/main/default/objects/Area_Hierarchy__c/fields/Task_ESCL_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_ESCL_Type__c</fullName>
    <label>Task ESCL Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>