force-app/main/default/objects/Area_Hierarchy__c/listViews/Activity_Type.listView-meta.xml
<ListView>
    <fullName>Activity_Type</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Task_Type__c</columns>
    <columns>Task_ESCL_Type__c</columns>
    <columns>Is_Active__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Task_ESCL_Type__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Activity Type</label>
</ListView>