force-app/main/default/objects/Area_Hierarchy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Area__c</columns>
    <columns>Sub_Area__c</columns>
    <columns>Sub_Sub_Area__c</columns>
    <columns>Task_Type__c</columns>
    <columns>Task_ESCL_Type__c</columns>
    <columns>Is_Active__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>