force-app/main/default/objects/Area_Hierarchy__c/listViews/Case_Area.listView-meta.xml
<ListView>
    <fullName>Case_Area</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Area__c</columns>
    <columns>Sub_Area__c</columns>
    <columns>Sub_Sub_Area__c</columns>
    <columns>Task_Type__c</columns>
    <columns>Task_ESCL_Type__c</columns>
    <columns>Is_Active__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Task_Type__c</field>
        <operation>equals</operation>
    </filters>
    <label>Case Area</label>
</ListView>